# smart_energy_explorer

./: .gitattributes  .gitignore  .prettierrc  LICENSE  PRIVACY.md  README.md  angular.json  openapi.json  package-lock.json  package.json  proxy.conf.json  tsconfig.json  tsconfig.spec.json
.github/workflows/: build.yaml  release.yaml
public/: 3rdpartylicenses.txt  3rdpartylicensetext.txt
src/: index.html  main.ts  styles.scss  test-setup.ts
src-tauri/: .gitignore  Cargo.toml  about-txt.hbs  about.toml  deny.toml  license.html  tauri.conf.json  tauri.macappstore.conf.json  update-tauri-mac-app-store.sh
src-tauri/capabilities/: main.json  migrated.json  splashscreen.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-08-20-145238_create_consumption/: down.sql  up.sql
src-tauri/migrations/2024-09-03-145238_create_profiles/: down.sql  up.sql
src-tauri/migrations/2024-09-10-093011_create_tariffs/: down.sql  up.sql
src-tauri/migrations/20240820_create_consumption/: down.sql
src-tauri/migrations/2025-06-03-085930_rename_gas_consumption_units/: down.sql  up.sql
src-tauri/migrations/2026-06-30-095504-0000_migrate_to_watthours/: down.sql  up.sql
src-tauri/migrations/2026-07-01-124959-0000_add_london_date/: down.sql  up.sql
src-tauri/src/: app_settings.rs  db.rs  download.rs  main.rs  mqtt.rs  retry.rs  schema.rs  serde_utils.rs  utils.rs
src-tauri/src/clients/: data_provider.rs  glowmarkt.rs  mod.rs  n3rgy.rs
src-tauri/src/commands/: app.rs  assistant.rs  electricity.rs  gas.rs  glowmarkt.rs  mod.rs  mqtt.rs  n3rgy.rs  profiles.rs  tariff.rs
src-tauri/src/data/: assistant.rs  consumption.rs  energy_profile.rs  mod.rs  tariff.rs
src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  unsaved-changes.guard.spec.ts  unsaved-changes.guard.ts
src/app/common/: settings.ts  validators.ts
src/app/components/about/: about.component.html  about.component.ts
src/app/components/api-key-form/: api-key-form.component.html  api-key-form.component.spec.ts  api-key-form.component.ts
src/app/components/assistant/: assistant.component.html  assistant.component.ts
src/app/components/bright-credentials-form/: bright-credentials-form.component.html  bright-credentials-form.component.spec.ts  bright-credentials-form.component.ts
src/app/components/bright-settings/: bright-settings.component.html  bright-settings.component.spec.ts  bright-settings.component.ts
src/app/components/chart/: chart.component.html  chart.component.ts
src/app/components/data-downloading/: data-downloading.component.html  data-downloading.component.spec.ts  data-downloading.component.ts
src/app/components/data-management-settings/: data-management-settings.component.html  data-management-settings.component.spec.ts  data-management-settings.component.ts
src/app/components/energy-cost-history/: energy-cost-history.component.html  (+2 more)
src/app/status-bar/: status-bar.component.html  status-bar.component.ts
src/testing/: tauri-plugin-store.mock.ts
(+100 files in other folders)
