[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
git-version = "0.3.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "^0.4"
n3rgy = { path = "../../n3rgy-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-dialog = "2.0.0-alpha.2"
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-store = "2.0.0-rc.3"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
whoami = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]


[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-rc"
