[package]
name = "smart_energy_explorer"
version = "0.1.3"
description = "A dashboard for exploring home energy usage"
authors = ["Richard Russell"]
license = "AGPL-3.0-or-later"
repository = ""
default-run = "smart_energy_explorer"
edition = "2021"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "2.0.0", features = ["sqlite", "chrono"] }
diesel_migrations = "2.0"
git-version = "0.3.9"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
log = "^0.4"
n3rgy_consumer_api_client = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.0.0", features = ["unstable"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-shell = "2.0.0"
thiserror = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]


[dependencies.tauri-plugin-sql]
features = ["sqlite"] # or "postgres", or "mysql"
version = "2.0.0-rc"
